# AI_Programming

./: ConvNet.py  README.md  SimpleNet.py  autodiff.py  basic_operator.py  dataset_download.py  device.py  main.py  operators.py  predict.py  task2_autodiff.py  tensor.py  test_backward.py  test_forward.py  test_topo_sort.py  train.py  ttt.py  utils.py
MyTensor/: .clangd  CMakeLists.txt  Dataset_Download.py  Module.cu  Module.h  Tensor.cu  Tensor.h  UnitTest.py  binding.cpp  collect.sh  main.cu
lab4_attachments/: ConvNet.py  basic_operator.py  task1_operators.py  test_task1_backward.py  test_task1_forward.py  ttt.py
lab5_attachments/: task1_optimizer.py
